# ffmpegdemo

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bksx/mobile/terminal/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/jni/: ffmpeg_handler.cpp
app/src/main/java/com/bksx/mobile/terminal/ffmpegdemo/: CameraActivity.java  FFmpegHandle.java  LogUtils.java  MainActivity.java  MySurfaceView.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bksx/mobile/terminal/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
